# VTK_Sandbox

./: .gitignore  README.md
BoundarySurfaceByDistance/: BoundarySurfaceByDistance.cxx  BoundarySurfaceByDistanceApp.cxx  CMakeLists.txt  README.txt
BoundarySurfaceByDistance/data/: boundary.vtk  boundary2.vtk  clippedSphere.vtk  cylinder.vtk
BoundarySurfaceByDistance/lib/: BoundarySurfaceExtraction.cxx  BoundarySurfaceExtraction.h  BoundarySurfaceExtraction.py  CMakeLists.txt
Data/PTV/: contourPTV.vtk
PolyDataToImageData/: CMakeLists.txt  PolyDataToImageData.cxx
RasterizeMesh/: CMakeLists.txt  RasterizeMesh.cxx  RasterizeMeshConfig.h.in
RasterizeMesh/lib/: CMakeLists.txt  Rasterizer.cxx  Rasterizer.h
